; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-windows.c_gl_getclientsize.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-windows.c_gl_getclientsize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gs_swap_chain = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_5__ = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gl_getclientsize(%struct.gs_swap_chain* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.gs_swap_chain*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_5__, align 4
  store %struct.gs_swap_chain* %0, %struct.gs_swap_chain** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load %struct.gs_swap_chain*, %struct.gs_swap_chain** %4, align 8
  %9 = icmp ne %struct.gs_swap_chain* %8, null
  br i1 %9, label %10, label %23

10:                                               ; preds = %3
  %11 = load %struct.gs_swap_chain*, %struct.gs_swap_chain** %4, align 8
  %12 = getelementptr inbounds %struct.gs_swap_chain, %struct.gs_swap_chain* %11, i32 0, i32 0
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @GetClientRect(i32 %15, %struct.TYPE_5__* %7)
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load i32*, i32** %5, align 8
  store i32 %18, i32* %19, align 4
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32*, i32** %6, align 8
  store i32 %21, i32* %22, align 4
  br label %26

23:                                               ; preds = %3
  %24 = load i32*, i32** %5, align 8
  store i32 0, i32* %24, align 4
  %25 = load i32*, i32** %6, align 8
  store i32 0, i32* %25, align 4
  br label %26

26:                                               ; preds = %23, %10
  ret void
}

declare dso_local i32 @GetClientRect(i32, %struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
